--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 70.5rem;
+    margin: 0 auto;
     padding: 1rem 1.5rem;
 }
 
