--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     max-width: 70.5rem;
     margin: 0 auto;
-    padding: 1rem 1.5rem;
+    padding: 1.5rem;
 }
 
 .header__logo {
