--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,16 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 70.5rem;
-    margin: 0 auto;
     padding: 1.5rem;
 }
 
-.header__logo {
-    font-size: 28px;
-    font-weight: 600;
+.nav {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo img {
+    width: 165px;
 }
 
 .header__logo a {
