--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,14 +1,5 @@
 .footer {
-    padding: 2rem;
-}
-
-.footer__logo {
-    font-size: 28px;
-    font-weight: 600;
+    padding: 1rem 1.5rem;
     text-align: center;
-}
-
-.footer__logo a {
-    color: inherit;
-    text-decoration: none;
+    border-top: 1px solid #E6E6E6;
 }
