--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-    padding: 1.5rem;
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid #E6E6E6;
 }
 
 .nav {
@@ -7,10 +8,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.header__logo img {
-    width: 165px;
 }
 
 .header__logo a {
