--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -3,15 +3,15 @@
 }
 
 .search__input {
-    padding: 16px 24px;
-    background-color: #EFF6FF;
-    border-radius: 4px;
+    padding: 12px 24px;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    border-radius: 8px;
     outline: none;
 }
 
-.search__input:hover,
-search__input:focus {
-    border: 1px solid #3B82F6;
+.search__input:focus {
+    border: 1px solid #E6E6E6;
 }
 
 .search__icon {
