--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,8 +1,10 @@
 .table {
     width: 100%;
-    box-shadow: 0px 3px 8px rgba(9, 30, 66, 0.16), 0px 0px 1px rgba(9, 30, 66, 0.31);
+    /* box-shadow: 0px 3px 8px rgba(9, 30, 66, 0.16), 0px 0px 1px rgba(9, 30, 66, 0.31); */
+    border: 1px solid #E6E6E6;
     border-radius: 4px;
     padding: 1rem;
+    background-color: #FFFFFF;
 }
 
 .col__icon {
