--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -21,9 +21,9 @@
     
 }
 
-.page__link:focus,
-.page__link:active {
+.active {
     background-color: #3B82F6;
+    border-radius: 4px;
     color: #FFFFFF;
 }
 
