--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,7 +68,9 @@ html {
 }
 
 .select__container {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -76,10 +78,5 @@ html {
     display: flex;
     justify-content: space-between;
     padding-bottom: 1.5rem;
-  }
-
-  .select__container {
-    display: flex;
-    gap: 2rem;
   }
 }
