--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,21 +1,40 @@
 .table {
-    width: 100%;
-    /* box-shadow: 0px 3px 8px rgba(9, 30, 66, 0.16), 0px 0px 1px rgba(9, 30, 66, 0.31); */
-    border: 1px solid #E6E6E6;
-    border-radius: 4px;
-    padding: 1rem;
-    background-color: #FFFFFF;
-}
+    --side-padding: 3rem; /* The sum of the left and right padding */
+  
+    overflow-x: scroll;
+    overflow-y: visible;
+  
+    padding: 0 1.5rem;
+  
+    min-width: calc(100% + var(--side-padding));
+    margin-left: calc(-1 * (var(--side-padding) / 2));
+  }
 
-.col__icon {
-    cursor: pointer;
-}
-
-.table th {
+  .table th {
     text-align: left;
     font-size: 1.125rem;
+    width: 10rem;
 }
+  
+  .inner {
+    width: 100%;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding: 1rem;
+    min-width: 600px;
+    width: 100%;
+  
+    border-collapse: collapse;
+  }
+  
+  .cell {
+    padding: 1rem;
+    border: 1px solid gainsboro;
+  }
 
-.table span {
+  .col__icon {
     cursor: pointer;
+    vertical-align: middle;
+    position: relative;
+    top: -2px;
 }
