--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -8,10 +8,11 @@
     border: 1px solid #E6E6E6;
     border-radius: 8px;
     outline: none;
+    width: 100%;
 }
 
 .search__input:focus {
-    border: 1px solid #E6E6E6;
+    border: 1px solid #B0B3B8;
 }
 
 .search__icon {
