--- a/src/components/SelectFilter/SelectFilter.module.css
+++ b/src/components/SelectFilter/SelectFilter.module.css
@@ -1,6 +1,6 @@
-.select__container {
-    display: flex;
-    gap: 3rem;
+.select__field {
+    position: relative;
+    flex: 1;
 }
 
 .select {
@@ -10,10 +10,18 @@
     border-radius: 8px;
     outline: none;
     cursor: pointer;
+    width: 100%;
 }
 
 .select:focus {
     border: 1px solid #B0B3B8;
+}
+
+.select__icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
 }
 
 @media screen and (max-width: 768px) {
